@@ -289,6 +289,10 @@ xweave <- function(file, quiet = TRUE, encoding = NULL, engine = NULL,
 }
 
 
+## manage internal options, e.g., for passing them to individual exercises
+## (which is more difficult to do using regular arguments) and/or control
+## application of certain fixups
+
 .exams_internal <- new.env()
 
 .exams_get_internal <- function(x = NULL) {
@@ -315,14 +319,21 @@ xweave <- function(file, quiet = TRUE, encoding = NULL, engine = NULL,
 }
 
 .exams_set_internal(
+  ## directories used by xexams()
   xexams_dir_output      = NULL,
   xexams_dir_exercises   = NULL,
   xexams_dir_supplements = NULL,
   xexams_dir_temporary   = NULL,
 
+  ## call/traceback of functions called
   xexams_call            = list(call = NULL, traceback = NULL),
 
+  ## default graphics device used in xweave() (png, pdf, svg)
   xweave_device          = "png",
 
-  pandoc_mathjax_fixup   = FALSE
+  ## post-process MathJax output from pandoc for OpenOLAT
+  pandoc_mathjax_fixup   = FALSE,
+  
+  ## restore random seed after single test version of exam
+  nops_restore_seed      = TRUE
 )
